CORS Support für IONIC Mock

--- a/rest-mock/src/main/resources/response.properties
+++ b/rest-mock/src/main/resources/response.properties
@@ -1,1 +1,1 @@
-get-alarms={\n\t"alarms"\: [\n\t\t{ "name"\: "Werktags", "monday"\: true, "tuestday"\: true, "hour"\: 7, "minute"\: 30, "active"\: true}\n\t]\n}
+get-alarms=[\n\t{ "name"\: "Werktags", "monday"\: true, "tuestday"\: true, "hour"\: 7, "minute"\: 30, "active"\: true},\n\t{ "name"\: "Wochenende", "saturday"\: true, "hour"\: 10, "minute"\: 30, "active"\: true}\n]
