connects the light status with rest

--- a/rest-mock/src/main/resources/response.properties
+++ b/rest-mock/src/main/resources/response.properties
@@ -1,1 +1,2 @@
 get-alarms=[\n\t{ "name"\: "Werktags", "monday"\: true, "tuestday"\: true, "hour"\: 7, "minute"\: 30, "active"\: true},\n\t{ "name"\: "Wochenende", "saturday"\: true, "hour"\: 10, "minute"\: 30, "active"\: true}\n]
+get-light={"on"\: true, "red"\: 123, "green"\: 230, "blue"\: 40}
